...
  "account": "账号",
  "accountSecurity": "账号安全",
  "addFriend": "添加朋友",
  "addPhoneContact": "添加手机联系人",
  "addTag": "添加标签",
...
  "agreeContinue": "同意并继续",
  "album": "照片",
  "all": "全部",
  "allSenders": "所有发送者",
  "allTags": "全部标签",
  "allTime": "所有时间",
  "allTypes": "所有类型",
  "allowSearchMe": "允许搜索我",
...
  "alreadyEntered": "你已经输入过了",
  "alreadyMember": "已是成员",
  "appSize": "应用大小",
  "appSizeTips": "包含APP运行的必要文件，包括 APK 文件、优化的编译器输出和解压的原生库。",
  "appSqliteFileSizeExplain": "当前账号本地生成的sqlite文件大小；可清理所选聊天记录里的图片、视频、和文件，或者清空所选聊天记录里的所有聊天信息。",
...
  "businessCard": "名片",
  "busyTryAgainLater": "对方正忙，请稍后重试",
  "buttonAccomplish": "完成",
  "buttonAdd": "添加",
  "buttonBack": "返回",
...
  "buttonSend": "发送",
  "buttonSetEmpty": "置空",
  "buttonSubmit": "提交",
  "buttonTakingPictures": "拍照",
  "cache": "缓存",
...
  "contactSettingTag": "contactSettingTag",
  "contactTagListLogic": "contactTagListLogic",
  "contactTags": "联系人标签",
  "continueDownloading": "继续下载",
  "copied": "已复制",
  "copy": "复制",
  "coupon": "卡券",
  "createGroupF2f": "面对面建群",
  "createGroupF2fConfirmTips": "这些朋友也将进入群聊",
  "createGroupF2fTips": "和身边的朋友输入同样的四个数字，进入同一个群聊",
  "currentDevice": "当前设备",
  "darkModel": "深色模式",
  "delete": "删除",
  "deleteCollectConfirmDesc": "删除后无法恢复，确定要删除这条收藏吗？",
...
  "denylistNoteTitle": "黑名单说明",
  "details": "详情",
  "deviceAvailableSpace": "设备可用空间",
  "deviceDetails": "设备详情",
  "deviceList": "设备列表",
  "deviceName": "设备名称",
  "deviceType": "设备类型",
  "deviceUsedSpace": "设备已使用空间",
  "disable": "禁用",
  "displayProfile": "显示你的资料",
...
  "edit": "编辑",
  "editTag": "编辑标签",
  "email": "邮箱",
  "enGb": "英国英语",
  "enUs": "美国英语",
...
  "failedRequestPleaseCheckNetwork": "发起请求失败，请检查网络连接，或稍后重试",
  "favoriteGroupTagsEtc": "收藏人名、群名、标签等",
  "favorites": "收藏",
  "feedback": "反馈建议",
  "feedbackBuilder": "feedbackBuilder",
  "feedbackContentRequired": "反馈内容不能为空",
...
  "fileSize": "文件大小",
  "findNearbyPeople": "找附近的人",
  "followSystem": "跟随系统",
  "followSystemTips": "开启后,将跟随系统打开或关闭深色模式",
  "forceLogoutNotification": "您已被设备【%s】强制下线",
  "forgotPassword": "忘记密码？",
  "forgotPasswordPinCodeView": "forgotPasswordPinCodeView",
  "forward": "转发",
...
  "friendsPermissionsView": "friendsPermissionsView",
  "from": "来自",
  "gender": "性别",
  "genderConflictError": "性别设置冲突，请重试",
  "genderNetworkError": "网络异常，请检查网络连接",
...
  "groupAlias": "我在本群的昵称",
  "groupAnnouncement": "群公告",
  "groupChat": "群聊",
  "groupDissolve": "解散群聊",
  "groupJoin": "加入群聊",
...
  "helpDocument": "帮助文档",
  "hintEditGroupAnnouncement": "编辑群公告",
  "hintLoginAccount": "账号/邮箱",
  "httpParse": "httpParse",
  "httpResponse": "httpResponse",
  "iAm": "我是",
  "image": "图片",
  "imageMessage": "[图片]",
  "incomingCall": "%s呼入",
  "info": "信息",
  "infoLoggedInOnAnotherDevice": "你的账号已于%s在其他设备登录",
  "initiateChat": "发起群聊",
  "installNow": "立即安装",
  "iosAppIdUnknown": "AppStore未上架或AppID[%s]不存在",
  "justChat": "仅聊天",
  "keepSecret": "保密",
  "languageSetting": "语言设置",
  "languageState": "languageState",
  "lastActiveTime": "最近活跃时间",
  "lastActiveTips": "当设备处于安全状态时，会自动延长登录时间以保持朋友消息的及时收发，此时会更新最近活跃时间。",
  "lastSeenDaysAgo": "lastSeenDaysAgo",
...
  "logOut": "退出登录",
  "login": "登录",
  "loginDeviceManagement": "登录设备管理",
  "loginDeviceManagementTips": "你的帐号在以下设备中登录过，你可以删除设备，删除后在该设备登录时需进行安全验证。",
  "loginEmail": "登录邮箱",
  "logoutAccount": "注销账号",
  "logoutNotice": "《注销须知》",
  "loudspeaker": "扩音器",
...
  "microphone": "麦克风",
  "microphonePermissionNotObtained": "未获取到麦克风权限",
  "mobile": "手机",
  "mobileQuickLogin": "一键登录",
  "moment": "朋友圈",
  "momentStatus": "朋友圈和状态",
  "moreInfo": "更多信息",
  "multiSelect": "多选",
  "multiSelectMode": "多选模式",
...
  "myAccount": "我的账号",
  "myAddress": "我的地址",
  "myFavorites": "我的收藏",
  "myLive": "我的直播",
  "myQrcode": "我的二维码",
...
  "networkFailureTryAgain": "网络故障，请重试！",
  "networkNotAvailable": "当前网络不可用。",
  "newFriend": "新的朋友",
  "newPassword": "新的密码",
  "newVersionDetected": "检测到新版本",
  "newlyRegisteredPeople": "新注册的人",
  "nextStep": "下一步",
  "nickname": "昵称",
  "nicknameChangeVisibility": "昵称修改后，只会在此群内显示，群内成员都可以看见。",
  "nicknameCharsRemaining": "还可输入%s个字符",
...
  "nicknameEmojiOnlyError": "昵称不能仅包含表情符号",
  "nicknameEmptyError": "昵称不能为空",
  "nicknameHint": "请输入昵称",
  "nicknameLengthError": "昵称长度应在2-24个字符之间",
  "nicknameNetworkError": "网络异常，请检查网络连接",
...
  "peopleInfoMoreLogic": "peopleInfoMoreLogic",
  "peopleInfoSameGroupView": "peopleInfoSameGroupView",
  "peopleNearby": "附近的人",
  "peopleNearbyLogic": "peopleNearbyLogic",
  "perMinuteOnce": "每分钟只能请求一次",
...
  "personalInfoDesc": "个人信息描述",
  "personalInfoTip": "个人信息提示",
  "personalInformation": "个人信息",
  "pin": "置顶",
  "pinChat": "置顶聊天",
...
  "recentForwards": "最近转发",
  "recentlyRegisteredUser": "recentlyRegisteredUser",
  "recentlyUsed": "最近使用",
  "recommendToFriend": "把他推荐给朋友",
  "recoverCodePasswordDesc": "我们会将密码恢复码发送到您的邮箱。",
  "recoverPassword": "找回密码",
  "recoverPasswordDesc": "",
  "recoverPasswordIntro": "不要感觉不好，这是常有的事。",
  "recoverPasswordSuccess": "验证码发送成功",
  "region": "地区",
  "regionCancel": "取消",
  "regionConfirm": "确定",
  "regionNoResult": "暂无结果",
  "regionSearchHint": "按地区名称搜索",
  "regionSearchTips": "按地区名称或区域编码搜索",
  "regionSelectTitle": "选择地区",
...
  "saveSuccess": "保存成功",
  "scan": "扫一扫",
  "scanQrCode": "扫描二维码",
  "scanQrCodeBusinessCard": "扫描二维码名片",
  "scanQrcodeAddFriend": "扫一扫上面的二维码图案，加我为朋友",
  "scanResult": "扫描结果",
  "scannerResult": "scannerResult",
  "search": "搜索",
  "searchChatContent": "查找聊天内容",
  "searchChatRecord": "查找聊天记录",
...
  "searchFilters": "搜索筛选",
  "searchFriendsTips": "通过好友昵称、备注搜索好友",
  "searchHint": "输入关键词搜索消息",
  "searchHistory": "搜索历史",
  "searchLocation": "搜索地点",
...
  "searchSuggestions": "搜索建议",
  "securityCenter": "安全中心",
  "selectAGroup": "选择一个群",
  "selectAll": "全选",
  "selectContacts": "选择联系人",
  "selectFriend": "selectFriend",
  "selectFriends": "选择朋友",
  "selectGroup": "选择群聊",
  "selectOrEnterTag": "选择或输入标签",
  "selectRegionView": "selectRegionView",
  "selected": "已选",
  "selectedItems": "%s 个选定项目",
  "selectedRegion": "已选地区",
  "sendFriendRequest": "发送添加朋友申请",
  "sendMsgNotFriendTips": "对方开启了好友验证，你还不是他（她）好友。请先发送好友验证请求，对方验证通过后，才能聊天。",
...
  "sentByOthers": "他人发送的",
  "setChatBackground": "设置当前聊天背景",
  "setNickname": "设置昵称",
  "setParam": "设置%s",
  "setting": "设置",
  "share": "分享",
  "siginQ": "已经有账号了？",
  "signInWith": "用%s登录",
  "signature": "个性签名",
  "signatureInputHint": "签名输入提示",
  "signaturePlaceholder": "签名占位符",
  "signatureTips": "签名提示",
  "signup": "注册",
  "signupFormDesc": "请填写此表格以完成注册",
  "signupIntro": "确认码已发送到您的邮箱，\n请输入确认码确认您的帐户。",
...
  "stillNeeded": "还需",
  "storagePermissionNotObtained": "未获取存储权限",
  "storageSpace": "存储空间",
  "storageSpaceData": "存储空间和数据",
  "strongReminder": "强提醒",
...
  "switchAccount": "切换账号",
  "switchEnvironment": "切换环境",
  "tags": "标签",
  "tellFriend": "告诉朋友",
  "termOfServices": "服务条款",
  "text": "文本",
  "textMessage": "文本消息",
  "thisMonth": "本月",
...
  "titleMessage": "消息",
  "titleMine": "我的",
  "today": "今天",
  "tooBad": "太差了",
  "topChat": "置顶聊天",
  "tryAgainQ": "想再试一次吗？",
  "type": "类型",
  "typeMessage": "输入消息...",
  "unanswered": "未应答",
...
  "uploading": "上传中",
  "usedSpace": "已使用空间",
  "userData": "用户数据",
  "userDataTips": "包含APP运行时必要的文件，以及聊天消息、好友关系等所有记录数据。",
  "userDisabledOrDeleted": "用户被禁用或已删除",
...
  "yourContactInformation": "你的联系方式",
  "yourFeel": "这让你感觉如何?",
  "zhCn": "简体中文",
  "zhHant": "繁体中文",
  "timeJustNow": "刚刚",
...
