...
        child: ListView(
          padding: const EdgeInsets.symmetric(horizontal: 16),
          children: [
            // 系统默认背景
            ListTile(
              title: Text(
                '系统默认',
                style: TextStyle(
                  color: colorScheme.primary,
                  fontSize: textTheme.titleMedium?.fontSize ?? 16,
                ),
              ),
              subtitle: Text(
...
