...
  "noConversationMessages": "無會話消息",
  "notShow": "不顯示",
  "sureToLeaveGroup": "確定要退出本群嗎？",
  "sureToDissolveGroup": "確定要解散本群嗎？",
  "sureDeleteData": "確認刪除嗎？刪除後不可恢復。",
  "zhCn": "簡體中文",
  "zhTw": "繁體中文",
  "ruRu": "俄羅斯俄語",
  "enGb": "英國英語",
  "enUs": "美國英語",
  "frFr": "法語（法國）",
  "deDd": "德語（德國）",
  "jaJp": "日語（日本）",
...
